[package]
name = "school_sanctioned_gambling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
rand = "0.8.5"
local-ip-address = "0.5.6"
serde_json = "1.0.108"
serde = "1.0.190"
bevy_egui = "0.23.0"
