[package]
name = "school_sanctioned_gambling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy ={ version = "0.11", features = ["dynamic_linking"] }
rand = "0.8.5"
local-ip-address = "0.5.6"
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
bevy_egui = "0.22.0"
bincode = "1.3.3"
anyhow = "1.0.75"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
